syntax = "proto3";
package nodes;

option go_package = "github.com/snple/kokomi/pb/nodes;nodes";

import "const_message.proto";
import "generic_message.proto";

message ConstListRequest {
    pb.Page page = 1;
    // string device_id = 2;
    string tags = 3;
    string type = 4;
}

message ConstListResponse {
    pb.Page page = 1;
    uint32 count = 2;
    repeated pb.Const const = 3;
}

message ConstPullRequest {
    int64 after = 1;
    uint32 limit = 2;
    // string device_id = 3;
    string type = 4;
}

message ConstPullResponse {
    int64 after = 1;
    uint32 limit = 2;
    repeated pb.Const const = 3;
}

service ConstService {
    rpc Create(pb.Const) returns (pb.Const) {}
    rpc Update(pb.Const) returns (pb.Const) {}
    rpc View(pb.Id) returns (pb.Const) {}
    rpc Name(pb.Name) returns (pb.Const) {}
    rpc Delete(pb.Id) returns (pb.MyBool) {}
    rpc List(ConstListRequest) returns (ConstListResponse) {}
    rpc GetValue(pb.Id) returns (pb.ConstValue) {}
    rpc SetValue(pb.ConstValue) returns (pb.MyBool) {}
    rpc SetValueUnchecked(pb.ConstValue) returns (pb.MyBool) {}
    rpc GetValueByName(pb.Name) returns (pb.ConstNameValue) {}
    rpc SetValueByName(pb.ConstNameValue) returns (pb.MyBool) {}
    rpc SetValueByNameUnchecked(pb.ConstNameValue) returns (pb.MyBool) {}
    rpc ViewWithDeleted(pb.Id) returns (pb.Const) {}
    rpc Pull(ConstPullRequest) returns (ConstPullResponse) {}
    rpc Sync(pb.Const) returns (pb.MyBool) {}
}
